# Ondas_Antenas_Projeto_Final

./: CMakeLists.txt  PERMISSÃO PARA A PORTA.txt  Pico_lora.PY  README.MD  README.md  codigo_arduino.c  guardados.txt  painel_lora.py  sdkconfig  sdkconfig.old
Graficos/: grafico_rssi_distancia.py
Nó_Receptor_Pico/: main.py
Nó_Transmissor_Arduino/: transimite_arduino.c.ino
main/: CMakeLists.txt  recebe.c  teste_usb.c  transmite.c
